--- a/savedsearch-zdt-test-sdk/build.gradle
+++ b/savedsearch-zdt-test-sdk/build.gradle
@@ -1,7 +1,20 @@
 apply from:'test.gradle'
 def emcpsrvsSDKVer = getDependentSdkVersion('com.oracle.emaas.emcpsrvs.sdk', 'emaas-platform-tenant-sdk', '2.0.+')
-publishing {
-    publications {
+
+ext.customPomDefinition = {
+    def dependencies = asNode().appendNode('dependencies')
+    configurations.testConfig.allDependencies.each { dep ->
+        if (dep.name != 'unspecified') {
+            def dependency = dependencies.appendNode('dependency')
+            dependency.appendNode('groupId', dep.group)
+            dependency.appendNode('artifactId', dep.name)
+            dependency.appendNode('version', dep.version)
+        }
+    }
+}
+
+project.publishing.publications {
+   
      integTest(MavenPublication) {
                 setArtifactId(project.name+ '-' + integTestJar.appendix)
                 setGroupId project.publishGroup
@@ -19,19 +32,8 @@ publishing {
             }
         }
     }
-}
 
-ext.customPomDefinition = {
-    def dependencies = asNode().appendNode('dependencies')
-    configurations.testConfig.allDependencies.each { dep ->
-        if (dep.name != 'unspecified') {
-            def dependency = dependencies.appendNode('dependency')
-            dependency.appendNode('groupId', dep.group)
-            dependency.appendNode('artifactId', dep.name)
-            dependency.appendNode('version', dep.version)
-        }
-    }
-}
+
 
 
 
