--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -129,6 +129,7 @@ task DEVTest(type: EMTest, dependsOn: QATest) {
     include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/**/*.class"
     include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/json/*.class"
     include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/*.class"
+    //TODO fix below path later
 //    include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/*.class"
     include "oracle/sysman/emSDK/emaas/platform/savedsearch/model/**/*.class"
     include "oracle/sysman/emSDK/emaas/platform/savedsearch/exception/*.class"
@@ -152,6 +153,7 @@ task WebUtilTest(type: EMTest, dependsOn: DEVTest) {
 /*****************savedsearch-web project*****************/
     include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/**/*.class"
     include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/util/*"
+    //TODO fix below path later
 //    include "oracle/sysman/emaas/savedsearch/ut/*.class"
 
 
