--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -85,7 +85,7 @@ task DEVTest(type:EMTest,dependsOn: omcSetup){
 	include "oracle/sysman/emaas/savedsearch/MultitenentSearchTest.class"
 	include "oracle/sysman/emaas/savedsearch/DBConnectionManagerTest.class"	
 //	include "oracle/sysman/emaas/savedsearch/FolderSetTest.class"
-	include "oracle/sysman/emaas/savedsearch/TenantDataLeakTest.class"
+//	include "oracle/sysman/emaas/savedsearch/TenantDataLeakTest.class"
 //	include "oracle/sysman/emaas/savedsearch/UtilTest.class"
 	include "oracle/sysman/emaas/savedsearch/SearchManagerTestMockup.class"
 	include "oracle/sysman/emaas/savedsearch/SavedSearchDbExceptionTest.class"
