--- a/savedsearch-comparator/savedsearchcomparator-web/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-web/build.gradle
@@ -138,33 +138,33 @@ dependencies {
 	providedCompile (group: 'com.oracle.emaas.emcpgw.sdk', name: 'gateway-client', version: "${emaasAPIGWVersion}"){ transitive = false }
 	
 	
-	//providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5') { transitive = false }
-	//providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17') { transitive = false }
-	//providedCompile(group: 'com.sun.jersey', name: 'jersey-core', version: '1.17.1') {transitive=false}
-	//providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1') { transitive = false }
+	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5') { transitive = false }
+	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17') { transitive = false }
+	providedCompile(group: 'com.sun.jersey', name: 'jersey-core', version: '1.17.1') {transitive=false}
+	providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1') { transitive = false }
 
-	//providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4') { transitive = false }
-//	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0') { transitive = false }
+	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4') { transitive = false }
+	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0') { transitive = false }
 
-	//providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13') { transitive = false }
-//	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13') { transitive = false }
-	//providedCompile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2') { transitive = false }
+	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13') { transitive = false }
+	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13') { transitive = false }
+	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2') { transitive = false }
 	
-//	providedCompile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1') { transitive = false }
-  //      providedCompile(group: 'commons-logging', name:'commons-logging', version:'1.1.1') { transitive = false }
-//	providedCompile(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3') { transitive = false }
-//	providedCompile(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1') { transitive = false }
-//	providedCompile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3') { transitive = false }
-//	providedCompile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1') { transitive = false }
+	providedCompile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1') { transitive = false }
+        providedCompile(group: 'commons-logging', name:'commons-logging', version:'1.1.1') { transitive = false }
+	providedCompile(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3') { transitive = false }
+	providedCompile(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1') { transitive = false }
+	providedCompile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3') { transitive = false }
+	providedCompile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1') { transitive = false }
 	
-//	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1') { transitive = false }
+	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1') { transitive = false }
 	
-//	providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+') { transitive = false }
-//	providedCompile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2') { transitive = false }
+	providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+') { transitive = false }
+	providedCompile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2') { transitive = false }
 	
 	//compile(group: 'com.oracle.emaas.emcpsf.sdk', name: 'security-client', version: "${emaasSecurityClientVersion}") { transitive = false }
 
-	//testCompile('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
+	testCompile('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
 
 
 	
