--- a/savedsearch-comparator/savedsearchcomparator-ee/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-ee/build.gradle
@@ -29,29 +29,19 @@ dependencies
 	deploy (project(path:':savedsearch-comparator:savedsearchcomparator-web', configuration:'archives')) {transitive = false}
 	earlib (project(':savedsearch-comparator:savedsearchcomparator-webutils')){transitive = false} 
 	
-	earlib getProjectArtifact('registry-lookup-client')
-	earlib getProjectArtifact('registry-client')
-	earlib getProjectArtifact('emaas-platform-tenant-sdk')
-	earlib getProjectArtifact('httpclient')
-	earlib getProjectArtifact('httpcore')
-	earlib getProjectArtifact('httpmime')
-	earlib getProjectArtifact('log4j-api')
-	earlib getProjectArtifact('log4j-core')
-	earlib getProjectArtifact('log4j-web')
-	
-	//earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+') {transitive=false }
-	//earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+') {transitive=false }
-	//earlib (group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.2') {transitive=false }
-	//earlib (group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.2') {transitive=false }
+	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+') {transitive=false }
+	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+') {transitive=false }
+	earlib (group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.2') {transitive=false }
+	earlib (group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.2') {transitive=false }
     	earlib(group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.3.0'){transitive=false }
     	earlib(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.3.0'){transitive=false }
     	earlib(group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.0'){transitive=false }
-    	//earlib(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2'){transitive=false }
+    	earlib(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2'){transitive=false }
     	earlib(group: 'com.oracle.emaas.emcpgw.sdk', name: 'gateway-client', version: "${emaasAPIGWVersion}")
 
-    	//earlib(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1') { transitive = false }
-       // earlib(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3') { transitive = false }
-       // earlib(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1') { transitive = false }
+    	earlib(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1') { transitive = false }
+        earlib(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3') { transitive = false }
+        earlib(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1') { transitive = false }
         earlib(group: 'org.apache.commons', name:'commons-lang3', version:'3.1') { transitive = false }
     	earlib(group: 'commons-logging', name:'commons-logging', version:'1.1.1') { transitive = false }
     	earlib(group: 'commons-codec', name:'commons-codec', version:'1.6') { transitive = false }
