--- a/savedsearch-comparator/savedsearchcomparator-web/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-web/build.gradle
@@ -106,38 +106,6 @@ test {
 dependencies {
 	compile configurations.restAssured 
 	providedCompile (project(':savedsearch-comparator:savedsearchcomparator-webutils')) // { transitive = false }
-	
-	
-	providedCompile getProjectArtifact('security-client')
-	//providedCompile getProjectArtifact('wls-api')
-	providedCompile getProjectArtifact('registry-lookup-client')
-	//providedCompile getProjectArtifact('registry-client')
-	
-	providedCompile getProjectArtifact('servlet-api')
-	providedCompile getProjectArtifact('jersey-client')
-	providedCompile getProjectArtifact('jersey-multipart')
-	providedCompile getProjectArtifact('jettison')
-	
-	providedCompile getProjectArtifact('log4j-core')
-	providedCompile getProjectArtifact('log4j-api')
-
-	providedCompile getProjectArtifact('jackson-core-asl')
-	providedCompile getProjectArtifact('jackson-mapper-asl')
-	providedCompile getProjectArtifact('jackson-xc')
-	
-	providedCompile getProjectArtifact('commons-lang3')
-	providedCompile getProjectArtifact('hamcrest-core')
-	providedCompile getProjectArtifact('httpclient')
-	providedCompile getProjectArtifact('httpcore')
-	providedCompile getProjectArtifact('httpmime')
-
-	providedCompile getProjectArtifact('groovy-all')
-	
-	providedCompile getProjectArtifact('emaas-platform-tenant-sdk')
-	
-	providedCompile (group: 'com.oracle.emaas.emcpgw.sdk', name: 'gateway-client', version: "${emaasAPIGWVersion}"){ transitive = false }
-	
-	
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5') { transitive = false }
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17') { transitive = false }
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-core', version: '1.17.1') {transitive=false}
@@ -161,9 +129,23 @@ dependencies {
 	
 	providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+') { transitive = false }
 	providedCompile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2') { transitive = false }
-	
-	//compile(group: 'com.oracle.emaas.emcpsf.sdk', name: 'security-client', version: "${emaasSecurityClientVersion}") { transitive = false }
+	providedCompile (group: 'com.oracle.emaas.emcpgw.sdk', name: 'gateway-client', version: "${emaasAPIGWVersion}"){ transitive = false }
 
+	compile(group: 'com.oracle.emaas.emcpsf.sdk', name: 'security-client', version: "${emaasSecurityClientVersion}") { transitive = false }
+
+	testCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5')  { transitive = false }
+	testCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){ transitive = false }
+	testCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1'){ transitive = false }
+	testCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
+	testCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
+
+	testCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){ transitive = false }
+	testCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){ transitive = false }
+	testCompile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){ transitive = false }
+        testCompile(group: 'commons-logging', name:'commons-logging', version:'1.1.1'){ transitive = false }
+	testCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+'){ transitive = false }
+//	testCompile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2'){ transitive = false }
+        testCompile('com.sun.jersey:jersey-servlet:1.17.1') { transitive = false }
 	testCompile('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
 
 
