--- a/build.gradle
+++ b/build.gradle
@@ -199,6 +199,7 @@ configurations {
 	prebuild_testng { transitive = false }
 	prebuild_wlfullc { transitive = false }
 	prebuild_cache { transitive = false }
+        prebuild_multi_instances_sdk { transitive = false }
 	prebuild_integtest { transitive = false } 
 	compile.exclude group: "com.google.code.findbugs", module: "annotations"
 	driver
@@ -235,6 +236,7 @@ dependencies {
 			'org.codehaus.jettison:jettison:1.3.4'
 	prebuild_wlfullc 'com.oracle.weblogic:wlfullclient:12.1.2-0-0'
 	prebuild_cache   'com.oracle.coherence:coherence:12.1.3.0.0-130331.2230'
+        prebuild_multi_instances_sdk 'com.oracle.emaas.emcpcs.sdk:multi-instances-sdk:1.0.+'
 	prebuild_integtest 'org.jmockit:jmockit:1.19'
 	driver group: 'com.oracle.jdbc', name: 'ojdbc7', version: '12.1.0.1.0'
 }
@@ -253,6 +255,7 @@ task preBuildCompile(type: Copy) {
    from configurations.prebuild_jaxrs
    from configurations.prebuild_wlfullc
    from configurations.prebuild_cache
+   from configurations.prebuild_multi_instances_sdk
    from configurations.prebuild_integtest
    into "$afDir"
    rename 'registry-lookup-client-1.(.*)-(.*).jar', 'registry-lookup-client-1.x.jar'
