--- a/savedsearch-web/WebContent/WEB-INF/web.xml
+++ b/savedsearch-web/WebContent/WEB-INF/web.xml
@@ -15,6 +15,16 @@
   </welcome-file-list>
   
   <filter>
+    <filter-name>OMCMultiInstanceBeginFilter</filter-name>
+    <filter-class>oracle.sysman.emInternalSDK.emaas.platform.servicemanager.security.multiInstances.filter.OMCMultiInstanceBeginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>OMCMultiInstanceBeginFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <!-- ================= BEGIN Multi-Instance Sandwich ======================== -->
+
+  <filter>
     <filter-name>OWSMSecurityFilter</filter-name>
     <filter-class>oracle.wsm.agent.handler.servlet.SecurityFilter</filter-class>
     <init-param>
@@ -36,6 +46,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <!-- ================= END Multi-Instance Sandwich ======================== -->
+  <filter>
+    <filter-name>OMCMultiInstanceEndFilter</filter-name>
+    <filter-class>oracle.sysman.emInternalSDK.emaas.platform.servicemanager.security.multiInstances.filter.OMCMultiInstanceEndFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>OMCMultiInstanceEndFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <filter>
     <filter-name>CORS.filter</filter-name>
     <filter-class>oracle.sysman.emSDK.emaas.platform.savedsearch.ws.rest.SavedSearchCORSFilter</filter-class>
