Add multi inst jar to ear

--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -35,6 +35,7 @@ dependencies
 	earlib getProjectArtifact('registry-client')
 	earlib getProjectArtifact('zookeeper')
 	earlib getProjectArtifact('emaas-platform-tenant-sdk')
+	earlib getProjectArtifact('multi-instances-sdk')
 	earlib getProjectArtifact('httpclient')
 	earlib getProjectArtifact('httpcore')
 	earlib getProjectArtifact('httpmime')
