--- a/savedsearch-comparator/savedsearchcomparator-web/testenv.properties
+++ b/savedsearch-comparator/savedsearchcomparator-web/testenv.properties
@@ -1,4 +1,4 @@
-#Tue, 06 Jun 2017 11:46:18 +0800
+#Wed, 03 May 2017 21:35:08 -0700
 
-hostname=slc10uan.us.oracle.com
+hostname=den02dtf.us.oracle.com
 port=7001
