--- a/tests/suites/emcpssf_l1_test.gradle
+++ b/tests/suites/emcpssf_l1_test.gradle
@@ -158,7 +158,7 @@ include "oracle/sysman/emaas/platform/savedsearch/comparator/test/wls/management
  //***************below are savedsearchcomparator-webutils project test cases***************//
 include "oracle/sysman/emaas/platform/savedsearch/comparator/targetmodel/services/*.class"
 include "oracle/sysman/emaas/platform/savedsearch/comparator/webutils/**/*.class"
-
+		 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/metadata/MetadataRefreshAPITest.class"
 
         useRestAssured=true
 ext.set("testType", "integration")
@@ -216,6 +216,9 @@ include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/importsearch/Obj
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/SearchManagerImplForTargetCardTest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/zdt/DataManagerTest.class"
 include "oracle/sysman/emaas/savedsearch/UtilTest.class"
+	   include "oracle/sysman/emaas/platform/savedsearch/metadata/MetaDataRetrieverTest.class"
+	   include "oracle/sysman/emaas/platform/savedsearch/metadata/MetaDataStorerTest.class"
+	   include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/ImportSearchImplTest.class"
 useRestAssured =true
 ext.set("testType", "unit")
 
