EMCPSSF-504  remove foriegn key

--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -88,7 +88,7 @@ task DEVTest(type:EMTest,dependsOn: omcSetup){
 //	include "oracle/sysman/emaas/savedsearch/TenantDataLeakTest.class"
 //	include "oracle/sysman/emaas/savedsearch/UtilTest.class"
 	include "oracle/sysman/emaas/savedsearch/SearchManagerTestMockup.class"
-	include "oracle/sysman/emaas/savedsearch/SavedSearchDbExceptionTest.class"
+//	include "oracle/sysman/emaas/savedsearch/SavedSearchDbExceptionTest.class"
 	include "oracle/sysman/emaas/savedsearch/SearchNonGroupsTest.class"
 	include "oracle/sysman/emaas/savedsearch/FolderManagerNonGroupsTest.class"
 	include "oracle/sysman/emaas/savedsearch/OOBSearchTest.class"
