--- a/tests/suites/emcpssf_l1_test.gradle
+++ b/tests/suites/emcpssf_l1_test.gradle
@@ -91,6 +91,7 @@ dependencies {
 		 include "oracle/sysman/emaas/platform/savedsearch/comparator/exception/*.class"
 		 include "oracle/sysman/emaas/platform/savedsearch/comparator/ws/rest/comparator/**/*.class"
 		 include "oracle/sysman/emaas/platform/savedsearch/comparator/targetmodel/services/*.class"
+       	 include "oracle/sysman/emaas/platform/savedsearch/comparator/ws/timer/*.class"
         useRestAssured=true
 ext.set("testType", "integration")
 }
