--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -133,7 +133,7 @@ task DEVTest(type: EMTest, dependsOn: QATest) {
     include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/json/*.class"
     include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/*.class"
     //TODO fix below path later
-    include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/cache/*.class"
+    include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/cache/*/**.class"
     include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/*.class"
     include "oracle/sysman/emSDK/emaas/platform/savedsearch/model/**/*.class"
     include "oracle/sysman/emSDK/emaas/platform/savedsearch/exception/*.class"
