EMCPSSF-585: add commons-lang3 in SSF's build

--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -42,6 +42,7 @@ dependencies
 	earlib getProjectArtifact('log4j-api')
 	earlib getProjectArtifact('log4j-core')
 	earlib getProjectArtifact('log4j-web')
+	earlib getProjectArtifact('commons-lang3')
 	earlib getProjectArtifact('dashboards-sdk')
 }
 
