--- a/savedsearch-zdt-test-sdk/gradle-sdk/emcpssf_zdtTasksSdk.gradle
+++ b/savedsearch-zdt-test-sdk/gradle-sdk/emcpssf_zdtTasksSdk.gradle
@@ -26,14 +26,14 @@ ext.emcpssf_REPO_BID = getRepoBuildIDInProduct(System.env.SAAS_VERSION, 'emcpssf
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
  
 dependencies {
- 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-zdt-test-sdk-integ-tests', version: "${REPO_BID}")
-  	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
-    	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = true}
-   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${REPO_BID}") {transitive = true}
-   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version:  "${REPO_BID}") {transitive = true}
-    	testConfig (group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-web-integ-tests', version:  "${REPO_BID}") {transitive = true}
-   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-core-integ-tests', version: "${REPO_BID}") {transitive = true}
-   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = true}
+ 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-zdt-test-sdk-integ-tests', version: "${emcpssf_REPO_BID}")
+  	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${emcpssf_REPO_BID}"){ exclude('module':'groovy') }
+    	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${emcpssf_REPO_BID}") {transitive = true}
+   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${emcpssf_REPO_BID}") {transitive = true}
+   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version:  "${emcpssf_REPO_BID}") {transitive = true}
+    	testConfig (group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-web-integ-tests', version:  "${emcpssf_REPO_BID}") {transitive = true}
+   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-core-integ-tests', version: "${emcpssf_REPO_BID}") {transitive = true}
+   	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${emcpssf_REPO_BID}") {transitive = true}
 
     
 }
