Some few more changes

--- a/savedsearch-comparator/savedsearchcomparator-web/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-web/build.gradle
@@ -129,7 +129,7 @@ dependencies {
 	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1') { transitive = false }
 	
 	providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+') { transitive = false }
-	providedCompile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2') { transitive = false }
+	providedCompile(group: 'com.oracle.emaas.emcpsrvs.sdk', name:'emaas-platform-tenant-sdk', version:'2.1.+') { transitive = false }
 	providedCompile (group: 'com.oracle.emaas.emcpgw.sdk', name: 'gateway-client', version: "${emaasAPIGWVersion}"){ transitive = false }
 
 	compile(group: 'com.oracle.emaas.emcpsf.sdk', name: 'security-client', version: "${emaasSecurityClientVersion}") { transitive = false }
@@ -145,7 +145,7 @@ dependencies {
 	testCompile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){ transitive = false }
         testCompile(group: 'commons-logging', name:'commons-logging', version:'1.1.1'){ transitive = false }
 	testCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+'){ transitive = false }
-//	testCompile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2'){ transitive = false }
+//	testCompile(group: 'com.oracle.emaas.emcpsrvs.sdk', name:'emaas-platform-tenant-sdk', version:'2.1.+'){ transitive = false }
         testCompile('com.sun.jersey:jersey-servlet:1.17.1') { transitive = false }
 	testCompile('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
 
