--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -16,23 +16,22 @@ sourceSets {
                 }
 			}
 
-def regLookupClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-lookup-client', '1.+')
-def regClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-client', '1.+')
 dependencies {
-	compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){transitive = false}
-        compile(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3'){transitive = false}
-        compile(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1'){transitive = false}
-        compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
-        compile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1'){transitive = false}
-        compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
-        compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
+    compile getProjectArtifact('commons-lang3')
+    compile getProjectArtifact('groovy-all')
+    compile getProjectArtifact('hamcrest-core')
+    compile getProjectArtifact('httpclient')
+    compile getProjectArtifact('httpcore')
+    compile getProjectArtifact('httpmime')
+    compile getProjectArtifact('jackson-core-asl')
+    compile getProjectArtifact('jackson-mapper-asl')
+    compile getProjectArtifact('jettison')
+    compile getProjectArtifact('log4j-core')
+    compile getProjectArtifact('log4j-api')
+    compile getProjectArtifact('registry-client')
+    compile getProjectArtifact('registry-lookup-client')
 
-        compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
-        compile(group: 'log4j', name: 'log4j', version: '1.2.16'){transitive = false}
-    compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: regClientVer){transitive = false}
-        compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: regLookupClientVer){transitive = false}
-        compile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
-    testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+    testCompile getProjectArtifact('jmockit')
 }
 
 
