--- a/savedsearch-comparator/savedsearchcomparator-webutils/build.gradle
+++ b/savedsearch-comparator/savedsearchcomparator-webutils/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'eclipse'
 apply from:'test.gradle'
 
-
-
 jar {
         from('src/main/java') {
                 include '**/*.xml'
@@ -38,34 +36,24 @@ artifactoryPublish {
         publications('thisJarPublication')
 }
 
-
-
- 
-dependencies { 
-
-        compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
-        compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
-        compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0'){ transitive = false }
-        compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+')
-        compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+')
-        compile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2'){transitive=false }
-	compile(group: 'com.oracle.weblogic', name: 'wlfullclient', version: '12.1.2-0-0'){ transitive = false }
-/*        compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12'){ transitive = false }
-        compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12'){ transitive = false }
-        compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){ transitive = false }
-	
-	testCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
-        testCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
-	testCompile(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0') { transitive = false }
-	*/
-	testCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13') { transitive = false }
-	testCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13') { transitive = false }
-	testCompile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2') { transitive = false }
-//	testCompile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2'){transitive=false }
-	compile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
-} 
-
-
+dependencies {
+    compile getProjectArtifact('log4j-api')
+    compile getProjectArtifact('log4j-core')
+    compile getProjectArtifact('jackson-core-asl')
+    compile getProjectArtifact('jackson-mapper-asl')
+    compile getProjectArtifact('jackson-xc')
+    compile getProjectArtifact('javax.transaction-api')
+    compile getProjectArtifact('jersey-client')
+    compile getProjectArtifact('jersey-core')
+    compile getProjectArtifact('wlfullclient')
+    compile getProjectArtifact('wls-api')
+    
+    compile getProjectArtifact('emaas-platform-tenant-sdk')
+    compile getProjectArtifact('registry-client')
+    compile getProjectArtifact('registry-lookup-client')
+    
+    testCompile getProjectArtifact('jmockit')
+}
 
 sourceSets {
         test{
