--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -109,20 +109,25 @@ task DEVTest2(type:EMTest,dependsOn: DEVTest){
 	useRestAssured =true
 	ext.set("testType", "unit")
 }
-task QATest(type:EMTest,dependsOn: DEVTest2){
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/category/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/common/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/exception/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/folder/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/importsavedsearch/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/navigations/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/search/*"
-//	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/util/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/widget/*"
-	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/offboard/*" //This class must be run at last
+task QATest(type:EMTest,dependsOn: DEVTest2){		 
+	options.suiteXmlBuilder().suite('name': 'SSFTest') {
+    test('name': 'REST_APITest', 'preserve-order':'true') {
+        classes([:]) {
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.category')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.common')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.exception')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.folder')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.importsavedsearch')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.navigations')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.search')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.widget')
+		'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.offboard') //This class must be run at last		    
+        }
+    }         
+
 	//useWebdriver = true
 	// include "oracle.sysman.emSDK.emaas.platform.savedsearch.ws.*"
-        useRestAssured=true
+    useRestAssured=true
 	ext.set("testType", "integration")
 }
 
