--- a/tests/suites/emcpssf_shared_4n.gradle
+++ b/tests/suites/emcpssf_shared_4n.gradle
@@ -43,6 +43,7 @@ println "Customizing the UpgradeDataPopulation"
         test('name': 'pre_upg') {
             classes([:]) {
                 'class'('name':'oracle.sysman.emSDK.emaas.platform.savedsearch.test.upgrade.CategoryCRUDBeforeUpgradeTest')
+                'class'('name':'oracle.sysman.emSDK.emaas.platform.savedsearch.test.upgrade.TestZDTSyncComparisonBeforeUpgradeTest')
             }
         }
     }
@@ -57,6 +58,7 @@ task post_upgrade (type: EMTest, dependsOn: [omcCloudUpgrade,omcTenantAgentSetup
         test('name': 'post_upg') {
             classes([:]) {
                 'class'('name':'oracle.sysman.emSDK.emaas.platform.savedsearch.test.upgrade.FolderCRUDAfterUpgradeTest')
+                'class'('name':'oracle.sysman.emSDK.emaas.platform.savedsearch.test.upgrade.TestZDTSyncComparisonAfterUpgradeTest')
             }
         }
     }
