--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -146,6 +146,7 @@ task DEVTest(type: EMTest, dependsOn: QATest) {
     /*****************savedsearch-webutils project*****************/
     include "oracle/sysman/emaas/platform/savedsearch/metadata/*.class"
     include "oracle/sysman/emaas/platform/savedsearch/property/*.class"
+    include "oracle/sysman/emaas/platform/savedsearch/model/*.class"
     include "oracle/sysman/emaas/platform/savedsearch/services/*.class"
     include "oracle/sysman/emaas/platform/savedsearch/targetmodel/services/*.class"
     include "oracle/sysman/emaas/platform/savedsearch/utils/*.class"
